feat: Actualizar dependencias de package.json y nombres de visualización para componentes de UI
